<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/profilelayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragment.ProfileFragment">

    <include
        android:id="@+id/include"
        layout="@layout/nav_header_main" />


    <TextView
        android:id="@+id/change_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_orange"
        android:paddingLeft="30dp"
        android:paddingTop="16dp"
        android:paddingRight="30dp"
        android:paddingBottom="16dp"
        android:text="@string/change_mail"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
    android:id="@+id/login_history"
    android:layout_width="220dp"
    android:layout_height="70dp"
    android:background="@drawable/button_background_orange"
    android:paddingLeft="30dp"
    android:text="@string/login_history"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.156"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/change_mail"
    app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/deletebutton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background_red"
        android:paddingLeft="30dp"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_history"
        app:layout_constraintVertical_bias="0.982" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background_orange"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toEndOf="@+id/deletebutton" />

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5" />




</androidx.constraintlayout.widget.ConstraintLayout>

